cluster/apps/development/forgejo/app/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
  namespace: development
spec:
  parentRefs:
    - name: internal-gateway
      namespace: networking
  hostnames:
    - "git.home.${SECRET_DOMAIN}"
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: rfc1918-ips
      backendRefs:
        - name: forgejo-http
          port: 3000
